--- a/package.json
+++ b/package.json
@@ -8,17 +8,26 @@
     "accounts": "hardhat accounts",
     "test": "hardhat test",
     "run": "hardhat run scripts/run.js",
+    "typechain": "hardhat typechain",
     "start:localhost": "hardhat node",
     "deploy:localhost": "hardhat run scripts/deploy.js --network localhost"
   },
   "devDependencies": {
-    "hardhat": "^2.9.3"
+    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/hardhat": "^6.0.0",
+    "@types/node": "^17.0.25",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "chai": "^4.3.6",
+    "hardhat": "^2.9.3",
+    "ts-node": "^10.7.0",
+    "typechain": "^8.0.0",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-waffle": "2.0.3",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "chai": "^4.3.6",
+    "@nomiclabs/hardhat-waffle": "2.0.3",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.2"
+    "ethers": "^5.6.4"
   }
 }
