--- a/contract/tsconfig.json
+++ b/contract/tsconfig.json
@@ -8,7 +8,7 @@
         "resolveJsonModule": true
     },
     "include": [
-        "./scripts",
+        "contract/scripts",
         "./test",
         "./typechain-types"
     ],
