--- a/contract/package.json
+++ b/contract/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "waveportal",
+  "name": "@mosemeni/waveportal-contract",
   "version": "1.0.0",
+  "private": "true",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
