--- a/front-web/package.json
+++ b/front-web/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^4.1.5",
+    "@mantine/hooks": "^4.1.5",
     "ethers": "^5.6.4",
+    "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1"
+    "tabler-icons-react": "^1.46.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
@@ -23,10 +26,10 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "next start",
+    "build": "next build",
+    "test": "next test",
+    "dev": "next dev"
   },
   "eslintConfig": {
     "extends": "react-app"
