--- a/front-web/tsconfig.json
+++ b/front-web/tsconfig.json
@@ -14,7 +14,10 @@
     "incremental": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true
   },
   "include": [
     "next-env.d.ts",
