--- a/front-web/package.json
+++ b/front-web/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "eslint": "^8.14.0",
     "typescript": "^4.6.3"
   },
   "scripts": {
