--- a/front-web/package.json
+++ b/front-web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@mantine/core": "^4.1.5",
     "@mantine/hooks": "^4.1.5",
+    "@usedapp/core": "^1.0.0",
     "ethers": "^5.6.4",
     "next": "^12.1.5",
     "react": "^18.0.0",
