Add contract interactions methods

--- a/front-web/tsconfig.json
+++ b/front-web/tsconfig.json
@@ -16,6 +16,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "strict": false,
+    "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true
   },
