--- a/front-web/package.json
+++ b/front-web/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@mantine/core": "^4.1.5",
-    "@mantine/hooks": "^4.1.5",
+    "@mantine/core": "^4.2.1",
+    "@mantine/hooks": "^4.2.1",
+    "@mantine/notifications": "^4.2.1",
     "@usedapp/core": "^1.0.0",
     "ethers": "^5.6.4",
     "next": "^12.1.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "tabler-icons-react": "^1.46.0"
   },
   "devDependencies": {
@@ -18,8 +19,8 @@
     "@babel/plugin-transform-react-jsx": "^7.17.3",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^14.1.1",
+    "@testing-library/react": "^12",
+    "@testing-library/user-event": "^12",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
