--- a/contract/package.json
+++ b/contract/package.json
@@ -15,23 +15,23 @@
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "2.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.4"
+    "ethers": "^5.6.5"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.6.1",
     "@ethersproject/bytes": "^5.6.1",
-    "@ethersproject/providers": "^5.6.4",
+    "@ethersproject/providers": "^5.6.5",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^17.0.25",
+    "@types/node": "^17.0.31",
     "chai": "^4.3.6",
     "hardhat": "^2.9.3",
     "ts-node": "^10.7.0",
     "typechain": "^8.0.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.4"
   }
 }
